--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
 	<span id="218#interēmptum" data-intext="interēmptum" data-perslemma="interimo" data-lemma="interimō interimere interēmī interēmptus" data-pos="v-prppng-" data-shortdef="to destroy">interēmptum</span>
 	<span id="218#Lāium" data-intext="Lāium" data-perslemma="Laius" data-lemma="Lāius –ī m." data-pos="n-s---ma-" data-shortdef="Laius (a name)">Lāium</span>
 	<span id="218#ulcīscī" data-intext="ulcīscī" data-perslemma="ulciscor" data-lemma="ulcīscor ulcīscī ultus" data-pos="v--pnp---" data-shortdef="to avenge">ulcīscī</span>
-	<span id="218#iubet" data-intext="iubet" data-perslemma="jubeo" data-lemma="iubeō iubēre iussī iussus" data-pos="v3spia---" data-shortdef="to order">iubet</span>.
+	<span id="218#iubet" data-intext="iubet" data-perslemma="jubeo" data-lemma="iubeō iubēre iussī iussus" data-pos="v3spia---" data-shortdef="to order">iubet</span>:
 </p>
 <p data-ln="219">
 	<span id="219#nōn" data-intext="nōn" data-perslemma="non" data-lemma="nōn" data-pos="d--------" data-shortdef="not">nōn</span>
@@ -1722,7 +1722,7 @@
 	<span id="228#tremuit" data-intext="tremuit" data-perslemma="tremo" data-lemma="tremō tremere tremuī" data-pos="v3sria---" data-shortdef="to tremble">tremuit</span>
 	<span id="228#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="228#mōvit" data-intext="mōvit" data-perslemma="moveo" data-lemma="moveō movēre mōvī mōtus" data-pos="v3sria---" data-shortdef="to move">mōvit</span>
-	<span id="228#domum" data-intext="domum" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-s---fa-" data-shortdef="house, home">domum</span>,
+	<span id="228#domum" data-intext="domum" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-s---fa-" data-shortdef="house, home">domum</span>
 </p>
 <p data-ln="229">
 	<span id="229#ac" data-intext="ac" data-perslemma="ac" data-lemma="ac" data-pos="c--------" data-shortdef="and in addition">ac</span>
@@ -1745,10 +1745,10 @@
 	<span id="231#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="231#patī" data-intext="patī" data-perslemma="patior" data-lemma="patior patī passus" data-pos="v--pnp---" data-shortdef="to permit, endure">patī</span>
 	<span id="231#commōta" data-intext="commōta" data-perslemma="commoveo" data-lemma="commoveō commovēre commōvī commōtus" data-pos="v-srppfn-" data-shortdef="to shake, be moved">commōta</span>
-	<span id="231#Phoebum" data-intext="Phoebum" data-perslemma="Phoebus" data-lemma="Phoebus –ī m." data-pos="n-s---ma-" data-shortdef="Phoebus">Phoebum</span>;
+	<span id="231#Phoebum" data-intext="Phoebum" data-perslemma="Phoebus" data-lemma="Phoebus –ī m." data-pos="n-s---ma-" data-shortdef="Phoebus">Phoebum</span>.
 	<span id="231#contigit" data-intext="contigit" data-perslemma="contingo1" data-lemma="contingō contingere contigī contāctus" data-pos="v3sria---" data-shortdef="to touch">contigit</span>
 	<span id="231#nōndum" data-intext="nōndum" data-perslemma="nondum" data-lemma="nōndum" data-pos="d--------" data-shortdef="not yet">nōndum</span>
-	<span id="231#specum" data-intext="specum" data-perslemma="specus" data-lemma="specus –ūs m./f." data-pos="n-s---ma-" data-shortdef="cave">specum</span>,
+	<span id="231#specum" data-intext="specum" data-perslemma="specus" data-lemma="specus –ūs m./f." data-pos="n-s---ma-" data-shortdef="cave">specum</span> —
 </p>
 <p data-ln="232">
 	<span id="232#ēmicat" data-intext="ēmicat" data-perslemma="emico" data-lemma="ēmicō ēmicāre ēmicuī ēmicātus" data-pos="v3spia---" data-shortdef="to leap, shine">ēmicat</span>
@@ -1771,7 +1771,7 @@
 	<span id="234#Dircēn" data-intext="Dircēn" data-perslemma="Dirce" data-lemma="Dircē –ēs f." data-pos="n-s---fa-" data-shortdef="Dirce (name)">Dircēn</span>
 	<span id="234#Ismēnida" data-intext="Ismēnida" data-perslemma="Ismenis" data-lemma="Ismēnis –idis f." data-pos="a-s---fa-" data-shortdef="a Theban woman">Ismēnida</span>
 	<span id="234#līqueris" data-intext="līqueris" data-perslemma="linquo" data-lemma="linquō linquere līquī" data-pos="v2stia---" data-shortdef="to leave, relinquish">līqueris</span>
-	<span id="234#hospes" data-intext="hospes" data-perslemma="hospes" data-lemma="hospes hospitis m." data-pos="n-s---mn-" data-shortdef="guest; stranger; host">hospes</span>
+	<span id="234#hospes" data-intext="hospes" data-perslemma="hospes" data-lemma="hospes hospitis m." data-pos="n-s---mn-" data-shortdef="guest; stranger; host">hospes</span>,
 </p>
 <p data-ln="235">
 	<span id="235#rēgis" data-intext="rēgis" data-perslemma="rex" data-lemma="rēx rēgis m." data-pos="n-s---mg-" data-shortdef="king">rēgis</span>
@@ -1842,7 +1842,7 @@
 	<span id="242#maximē" data-intext="maximē" data-perslemma="maxime" data-lemma="maximē" data-pos="d--------" data-shortdef="most greatly">maximē</span>
 	<span id="242#rēgum" data-intext="rēgum" data-perslemma="rex" data-lemma="rēx rēgis m." data-pos="n-p---mg-" data-shortdef="king">rēgum</span>
 	<span id="242#est" data-intext="est" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spia---" data-shortdef="to be">est</span>
-	<span id="242#salūs" data-intext="salūs" data-perslemma="salus" data-lemma="salūs salūtis f." data-pos="n-s---fn-" data-shortdef="health">salūs</span>;
+	<span id="242#salūs" data-intext="salūs" data-perslemma="salus" data-lemma="salūs salūtis f." data-pos="n-s---fn-" data-shortdef="health">salūs</span>:
 </p>
 <p data-ln="243">
 	<span id="243#quaerit" data-intext="quaerit" data-perslemma="quaero" data-lemma="quaerō quaerere quaesīvī quaesītus" data-pos="v3spia---" data-shortdef="to seek">quaerit</span>
@@ -1901,12 +1901,12 @@
 </p>
 <p data-ln="249">
 	<span id="249#tū" data-intext="tū" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---mv-" data-shortdef="you">tū</span>,
-	<span id="249#tū2" data-intext="tū" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---mv-" data-shortdef="you">tū</span>
+	<span id="249#tū2" data-intext="tū" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---mv-" data-shortdef="you">tū</span>,
 	<span id="249#penes" data-intext="penes" data-perslemma="penes" data-lemma="penes" data-pos="r--------" data-shortdef="within one’s power (+ acc.)">penes</span>
 	<span id="249#quem" data-intext="quem" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---ma-" data-shortdef="who, which">quem</span>
 	<span id="249#iūra" data-intext="iūra" data-perslemma="jus" data-lemma="iūs iūris n." data-pos="n-p---nn-" data-shortdef="right, justice, law">iūra</span>
 	<span id="249#praecipitis" data-intext="praecipitis" data-perslemma="praeceps" data-lemma="praeceps" data-pos="a-s---mg-" data-shortdef="headlong">praecipitis</span>
-	<span id="249#polī" data-intext="polī" data-perslemma="polus1" data-lemma="polus –ī m." data-pos="n-s---mg-" data-shortdef="pole, heavens">polī</span>,
+	<span id="249#polī" data-intext="polī" data-perslemma="polus1" data-lemma="polus –ī m." data-pos="n-s---mg-" data-shortdef="pole, heavens">polī</span>;
 </p>
 <p data-ln="250">
 	<span id="250#tūque" data-intext="tūque" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---mv-" data-shortdef="you">tūque</span>,
@@ -1931,7 +1931,7 @@
 	<span id="252#celerī" data-intext="celerī" data-perslemma="celer" data-lemma="celer celeris celere" data-pos="a-s---fb-" data-shortdef="swift">celerī</span>
 	<span id="252#saecula" data-intext="saecula" data-perslemma="saeculum" data-lemma="saeculum saeculī n." data-pos="n-p---na-" data-shortdef="age, generation; mortal race; present time">saecula</span>
 	<span id="252#ēvolvis" data-intext="ēvolvis" data-perslemma="evolvo" data-lemma="ēvolvō –ere –volvī –volūtus" data-pos="v2spia---" data-shortdef="to roll out or forth">ēvolvis</span>
-	<span id="252#rotā" data-intext="rotā" data-perslemma="rota" data-lemma="rota rotae f." data-pos="n-s---fb-" data-shortdef="wheel">rotā</span>,
+	<span id="252#rotā" data-intext="rotā" data-perslemma="rota" data-lemma="rota rotae f." data-pos="n-s---fb-" data-shortdef="wheel">rotā</span>;
 </p>
 <p data-ln="253">
 	<span id="253#sororque" data-intext="sororque" data-perslemma="soror" data-lemma="soror sorōris f." data-pos="n-s---fn-" data-shortdef="sister">sororque</span>
@@ -1942,7 +1942,7 @@
 </p>
 <p data-ln="254">
 	<span id="254#noctivaga" data-intext="noctivaga" data-perslemma="noctivagus" data-lemma="noctivagus –a –um" data-pos="a-s---fv-" data-shortdef="nightly">noctivaga</span>
-	<span id="254#Phoebē" data-intext="Phoebē" data-perslemma="Phoebe" data-lemma="Phoebē –ēs f." data-pos="n-s---fv-" data-shortdef="Phoebe">Phoebē</span>,
+	<span id="254#Phoebē" data-intext="Phoebē" data-perslemma="Phoebe" data-lemma="Phoebē –ēs f." data-pos="n-s---fv-" data-shortdef="Phoebe">Phoebē</span>;
 	<span id="254#quīque" data-intext="quīque" data-perslemma="qui" data-lemma="quī quae quod" data-pos="p-s---mn-" data-shortdef="who, which">quīque</span>
 	<span id="254#ventōrum" data-intext="ventōrum" data-perslemma="ventus" data-lemma="ventus ventī m." data-pos="n-p---mg-" data-shortdef="wind">ventōrum</span>
 	<span id="254#potēns" data-intext="potēns" data-perslemma="potens" data-lemma="potēns" data-pos="a-s---mn-" data-shortdef="powerful">potēns</span>
@@ -1953,7 +1953,7 @@
 	<span id="255#altum" data-intext="altum" data-perslemma="altus1" data-lemma="altus –a –um" data-pos="a-s---na-" data-shortdef="tall, high; deep">altum</span>
 	<span id="255#caerulōs" data-intext="caerulōs" data-perslemma="caerulus" data-lemma="caerulus (caeruleus) –a –um" data-pos="a-p---ma-" data-shortdef="dark blue">caerulōs</span>
 	<span id="255#currūs" data-intext="currūs" data-perslemma="currus" data-lemma="currus currūs m." data-pos="n-p---ma-" data-shortdef="chariot">currūs</span>
-	<span id="255#agis" data-intext="agis" data-perslemma="ago" data-lemma="agō agere ēgī āctus" data-pos="v2spia---" data-shortdef="to drive, do, act, concern oneself with">agis</span>,
+	<span id="255#agis" data-intext="agis" data-perslemma="ago" data-lemma="agō agere ēgī āctus" data-pos="v2spia---" data-shortdef="to drive, do, act, concern oneself with">agis</span>;
 </p>
 <p data-ln="256">
 	<span id="256#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
@@ -1961,7 +1961,7 @@
 	<span id="256#cārentēs" data-intext="cārentēs" data-perslemma="careo" data-lemma="careō carēre caruī caritus" data-pos="v-pppafa-" data-shortdef="to be without">cārentēs</span>
 	<span id="256#lūce" data-intext="lūce" data-perslemma="lux" data-lemma="lūx lūcis f." data-pos="n-s---fb-" data-shortdef="daylight">lūce</span>
 	<span id="256#dispōnis" data-intext="dispōnis" data-perslemma="dispono" data-lemma="dispōnō dispōnere dispōsuī dispōsitus" data-pos="v2spia---" data-shortdef="to place, arrange, distribute">dispōnis</span>
-	<span id="256#domōs" data-intext="domōs" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-p---fa-" data-shortdef="house, home">domōs</span>,
+	<span id="256#domōs" data-intext="domōs" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-p---fa-" data-shortdef="house, home">domōs</span> —
 </p>
 <p data-ln="257">
 	<span id="257#adeste" data-intext="adeste" data-perslemma="adsum" data-lemma="adsum adesse adfuī adfutūrus" data-pos="v2ppma---" data-shortdef="to be at, be present, be at hand">adeste</span>!
@@ -2106,7 +2106,7 @@
 	<span id="274#facinus" data-intext="facinus" data-perslemma="facinus" data-lemma="facinus facinoris n." data-pos="n-s---nn-" data-shortdef="deed, crime">facinus</span>
 	<span id="274#admissum" data-intext="admissum" data-perslemma="admitto" data-lemma="admittō admittere admīsī admīssus" data-pos="v3srip---" data-shortdef="to send to, admit">admissum</span>
 	<span id="274#locō" data-intext="locō" data-perslemma="locus" data-lemma="locus locī m. or loca locōrum n. pl." data-pos="n-s---mb-" data-shortdef="place, region">locō</span>
-	<span id="274#est" data-intext="est" data-perslemma="admitto" data-lemma="admittō admittere admīsī admīssus" data-pos="v3srip---" data-shortdef="to send to, admit">est</span>?
+	<span id="274#est" data-intext="est" data-perslemma="admitto" data-lemma="admittō admittere admīsī admīssus" data-pos="v3srip---" data-shortdef="to send to, admit">est</span>,
 </p>
 <p data-ln="275">
 	<span id="275#memorāte" data-intext="memorāte" data-perslemma="memoro" data-lemma="memorō memorāre memorāvī memorātus" data-pos="v2ppma---" data-shortdef="to remember">memorāte</span>:
@@ -2156,12 +2156,12 @@
 	<span id="280#arva" data-intext="arva" data-perslemma="arvum" data-lemma="arvum arvī n." data-pos="n-p---na-" data-shortdef="field">arva</span>
 	<span id="280#dēserit" data-intext="dēserit" data-perslemma="desero2" data-lemma="dēserō dēserere dēseruī dēsertus" data-pos="v3spia---" data-shortdef="to leave, abandon">dēserit</span>,
 	<span id="280#caelum" data-intext="caelum" data-perslemma="caelum1" data-lemma="caelum caelī n." data-pos="n-s---na-" data-shortdef="sky, heaven">caelum</span>
-	<span id="280#petēns" data-intext="petēns" data-perslemma="peto" data-lemma="petō petere petīvī petītus" data-pos="v-sppamn-" data-shortdef="to seek, go towards">petēns</span>,
+	<span id="280#petēns" data-intext="petēns" data-perslemma="peto" data-lemma="petō petere petīvī petītus" data-pos="v-sppamn-" data-shortdef="to seek, go towards">petēns</span>
 </p>
 <p data-ln="281">
 	<span id="281#clēmenter" data-intext="clēmenter" data-perslemma="clemens1" data-lemma="clēmēns (clēmentis)" data-pos="a--------" data-shortdef="merciful">clēmenter</span>
 	<span id="281#āctō" data-intext="āctō" data-perslemma="ago" data-lemma="agō agere ēgī āctus" data-pos="v-srppmb-" data-shortdef="to drive, do, act, concern oneself with">āctō</span>
-	<span id="281#colle" data-intext="colle" data-perslemma="collis" data-lemma="collis collis m." data-pos="n-s---mb-" data-shortdef="hill">colle</span>
+	<span id="281#colle" data-intext="colle" data-perslemma="collis" data-lemma="collis collis m." data-pos="n-s---mb-" data-shortdef="hill">colle</span>,
 	<span id="281#Parnāsus" data-intext="Parnāsus" data-perslemma="Parnasus" data-lemma="Parnāsus –ī m." data-pos="n-s---mn-" data-shortdef="Mt. Parnassus">Parnāsus</span>
 	<span id="281#biceps" data-intext="biceps" data-perslemma="biceps" data-lemma="biceps bicipitis" data-pos="a-s---mn-" data-shortdef="two-headed">biceps</span>;
 </p>
@@ -2199,7 +2199,7 @@
 	<span id="286#hīc" data-intext="hīc" data-perslemma="hic" data-lemma="hic haec hoc" data-pos="d--------" data-shortdef="this, these">hīc</span>
 	<span id="286#pāce" data-intext="pāce" data-perslemma="pax" data-lemma="pāx pācis f." data-pos="n-s---fb-" data-shortdef="peace; favor">pāce</span>
 	<span id="286#fretum" data-intext="fretum" data-perslemma="fretus1" data-lemma="frētus –a –um" data-pos="a-s---ma-" data-shortdef="leaning on">fretum</span>
-	<span id="286#subitā" data-intext="subitā" data-perslemma="subitus" data-lemma="subitus –a –um" data-pos="a-s---fn-" data-shortdef="having come up suddenly; unexpected">subitā</span>
+	<span id="286#subita" data-intext="subita" data-perslemma="subitus" data-lemma="subitus –a –um" data-pos="a-s---fn-" data-shortdef="having come up suddenly; unexpected">subita</span>
 	<span id="286#praedōnum" data-intext="praedōnum" data-perslemma="praedo2" data-lemma="praedō praedōnis m." data-pos="n-p---mg-" data-shortdef="robber">praedōnum</span>
 	<span id="286#manus" data-intext="manus" data-perslemma="manus1" data-lemma="manus manūs f." data-pos="n-s---fn-" data-shortdef="hand; band of men">manus</span>
 </p>
@@ -2208,7 +2208,7 @@
 	<span id="287#ferrō" data-intext="ferrō" data-perslemma="ferrum" data-lemma="ferrum ferrī n." data-pos="n-s---nb-" data-shortdef="iron">ferrō</span>
 	<span id="287#facinus" data-intext="facinus" data-perslemma="facinus" data-lemma="facinus facinoris n." data-pos="n-s---na-" data-shortdef="deed, crime">facinus</span>
 	<span id="287#occultum" data-intext="occultum" data-perslemma="occulo" data-lemma="occulō occulere occuluī occultus" data-pos="v-srppna-" data-shortdef="to cover">occultum</span>
-	<span id="287#tulit" data-intext="tulit" data-perslemma="fero" data-lemma="ferō ferre tulī lātus" data-pos="v3sria---" data-shortdef="to bear, carry, report">tulit</span>.
+	<span id="287#tulit" data-intext="tulit" data-perslemma="fero" data-lemma="ferō ferre tulī lātus" data-pos="v3sria---" data-shortdef="to bear, carry, report">tulit</span>. —
 </p>
 <p data-ln="288">
 	<span id="288#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
@@ -2244,7 +2244,7 @@
 </p>
 <p data-ln="292">
 	<span id="292#respōnsa" data-intext="respōnsa" data-perslemma="responsum" data-lemma="respōnsum respōnsī n." data-pos="n-p---na-" data-shortdef="answer">respōnsa</span>
-	<span id="292#solve" data-intext="solve" data-perslemma="solvo" data-lemma="solvō solvere solvī solūtus" data-pos="v2spma---" data-shortdef="to release, pay">solve</span>;
+	<span id="292#solve" data-intext="solve" data-perslemma="solvo" data-lemma="solvō solvere solvī solūtus" data-pos="v2spma---" data-shortdef="to release, pay">solve</span>,
 	<span id="292#fāre" data-intext="fāre" data-perslemma="for" data-lemma="for fārī fātus" data-pos="v2spmp---" data-shortdef="to speak, say">fāre</span>
 	<span id="292#quem" data-intext="quem" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---ma-" data-shortdef="who, which">quem</span>
 	<span id="292#poenae" data-intext="poenae" data-perslemma="poena" data-lemma="poena poenae f." data-pos="n-s---fd-" data-shortdef="punishment">poenae</span>
@@ -2291,7 +2291,7 @@
 </p>
 <p data-ln="297">
 	<span id="297#fāta" data-intext="fāta" data-perslemma="fatum" data-lemma="fātum –ī n." data-pos="n-p---nn-" data-shortdef="destiny, fate">fāta</span>
-	<span id="297#ēruantur" data-intext="ēruantur" data-perslemma="eruo" data-lemma="ēruō ēruere ēruī ērutus" data-pos="v3ppsp---" data-shortdef="to cast out or up; unearth, dig up">ēruantur</span>;
+	<span id="297#ēruantur" data-intext="ēruantur" data-perslemma="eruo" data-lemma="ēruō ēruere ēruī ērutus" data-pos="v3ppsp---" data-shortdef="to cast out or up; unearth, dig up">ēruantur</span>.
 	<span id="297#sī" data-intext="sī" data-perslemma="si" data-lemma="sī" data-pos="c--------" data-shortdef="if">sī</span>
 	<span id="297#foret" data-intext="foret" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3sisa---" data-shortdef="to be">foret</span>
 	<span id="297#viridis" data-intext="viridis" data-perslemma="viridis" data-lemma="viridis –e" data-pos="a-s---mn-" data-shortdef="green">viridis</span>
