--- a/index.html
+++ b/index.html
@@ -1713,7 +1713,7 @@
 	<span id="227#arx" data-intext="arx" data-perslemma="arx" data-lemma="arx arcis f." data-pos="n-s---fn-" data-shortdef="summit, citadel">arx</span>
 	<span id="227#trucem" data-intext="trucem" data-perslemma="trux" data-lemma="trux trucis" data-pos="n-s---ma-" data-shortdef="savage">trucem</span>
 	<span id="227#fremitum" data-intext="fremitum" data-perslemma="fremitus" data-lemma="fremitus –ūs m." data-pos="n-s---ma-" data-shortdef="murmuring">fremitum</span>
-	<span id="227#dedit" data-intext="dedit" data-perslemma="do" data-lemma="dō dare dedī datus" data-pos="v3sria---" data-shortdef="to give">dedit</span>;
+	<span id="227#dedit" data-intext="dedit" data-perslemma="do" data-lemma="dō dare dedī datus" data-pos="v3sria---" data-shortdef="to give">dedit</span>,
 </p>
 <p data-ln="228">
 	<span id="228#imminēns" data-intext="imminēns" data-perslemma="immineo" data-lemma="immineō imminēre" data-pos="v-sppafn-" data-shortdef="to threaten; overhang">imminēns</span>
@@ -1722,7 +1722,7 @@
 	<span id="228#tremuit" data-intext="tremuit" data-perslemma="tremo" data-lemma="tremō tremere tremuī" data-pos="v3sria---" data-shortdef="to tremble">tremuit</span>
 	<span id="228#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="228#mōvit" data-intext="mōvit" data-perslemma="moveo" data-lemma="moveō movēre mōvī mōtus" data-pos="v3sria---" data-shortdef="to move">mōvit</span>
-	<span id="228#domum" data-intext="domum" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-s---fa-" data-shortdef="house, home">domum</span>
+	<span id="228#domum" data-intext="domum" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-s---fa-" data-shortdef="house, home">domum</span>,
 </p>
 <p data-ln="229">
 	<span id="229#ac" data-intext="ac" data-perslemma="ac" data-lemma="ac" data-pos="c--------" data-shortdef="and in addition">ac</span>
