--- a/index.html
+++ b/index.html
@@ -2353,7 +2353,7 @@
 	<span id="304#superōs" data-intext="superōs" data-perslemma="superus" data-lemma="superus –a –um" data-pos="a-p---ma-" data-shortdef="above">superōs</span>
 	<span id="304#vōce" data-intext="vōce" data-perslemma="vox" data-lemma="vōx vōcis f." data-pos="n-s---fb-" data-shortdef="voice">vōce</span>
 	<span id="304#sollemnī" data-intext="sollemnī" data-perslemma="sollemnis" data-lemma="sollemnis –e" data-pos="a-s---fb-" data-shortdef="customary">sollemnī</span>
-	<span id="304#vocā" data-intext="vocā" data-perslemma="voco" data-lemma="vocō vocāre vocāvī vocātus" data-pos="v2spma---" data-shortdef="to call">vocā</span>,
+	<span id="304#vocā" data-intext="vocā" data-perslemma="voco" data-lemma="vocō vocāre vocāvī vocātus" data-pos="v2spma---" data-shortdef="to call">vocā</span>
 </p>
 <p data-ln="305">
 	<span id="305#arāsque" data-intext="arāsque" data-perslemma="ara" data-lemma="ara –ae f." data-pos="n-p---fa-" data-shortdef="altar">arāsque</span>
@@ -2420,7 +2420,7 @@
 	<span id="311#aurās" data-intext="aurās" data-perslemma="aura" data-lemma="aura aurae f." data-pos="n-p---fa-" data-shortdef="breeze">aurās</span>
 	<span id="311#fūsus" data-intext="fūsus" data-perslemma="fundo1" data-lemma="fundō fundāre fundāvī fundātus" data-pos="v-srppmn-" data-shortdef="to found">fūsus</span>
 	<span id="311#explicuit" data-intext="explicuit" data-perslemma="explico" data-lemma="explicō –āre –uī –itum" data-pos="v3sria---" data-shortdef="to unfold, unroll, disclose, loosen">explicuit</span>
-	<span id="311#comam" data-intext="comam" data-perslemma="coma" data-lemma="coma comae f." data-pos="n-s---fa-" data-shortdef="hair">comam</span>?
+	<span id="311#comam" data-intext="comam" data-perslemma="coma" data-lemma="coma comae f." data-pos="n-s---fa-" data-shortdef="hair">comam</span>,
 </p>
 <p data-ln="312">
 	<span id="312#an" data-intext="an" data-perslemma="an" data-lemma="an" data-pos="c--------" data-shortdef="or, whether, if">an</span>
@@ -2446,7 +2446,7 @@
 	<span id="314#faciēs" data-intext="faciēs" data-perslemma="facies" data-lemma="faciēs facieī f." data-pos="n-s---fn-" data-shortdef="appearance">faciēs</span>
 	<span id="314#mōbilis" data-intext="mōbilis" data-perslemma="mobilis" data-lemma="mōbilis –e" data-pos="a-s---fg-" data-shortdef="movable, loose">mōbilis</span>
 	<span id="314#flammae" data-intext="flammae" data-perslemma="flamma1" data-lemma="flamma flammae f." data-pos="n-s---fg-" data-shortdef="flame">flammae</span>
-	<span id="314#fuit" data-intext="fuit" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3sria---" data-shortdef="to be">fuit</span>:
+	<span id="314#fuit" data-intext="fuit" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3sria---" data-shortdef="to be">fuit</span>.
 </p>
 <p data-ln="315">
 	<span id="315#imbrifera" data-intext="imbrifera" data-perslemma="imbrifer" data-lemma="imbrifer –a –um" data-pos="a-s---fn-" data-shortdef="rain-bringing">imbrifera</span>
@@ -2488,11 +2488,11 @@
 </p>
 <p data-ln="320">
 	<span id="320#sanguinea" data-intext="sanguinea" data-perslemma="sanguineus" data-lemma="sanguineus –a –um" data-pos="a-s---fn-" data-shortdef="bloody, bloodshot">sanguinea</span>
-	<span id="320#rūrsus" data-intext="rūrsus" data-perslemma="rursus" data-lemma="rūrsus or rūrsum" data-pos="d--------" data-shortdef="back">rūrsus</span>;
+	<span id="320#rūrsus" data-intext="rūrsus" data-perslemma="rursus" data-lemma="rūrsus or rūrsum" data-pos="d--------" data-shortdef="back">rūrsus</span>,
 	<span id="320#ultima" data-intext="ultima" data-perslemma="ulter" data-lemma="ulter –tra –trum" data-pos="a-s---fns" data-shortdef="remote, on the other side">ultima</span>
 	<span id="320#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
 	<span id="320#tenebrās" data-intext="tenebrās" data-perslemma="tenebrae" data-lemma="tenebrae tenebrārum f. pl." data-pos="n-p---fa-" data-shortdef="darkness">tenebrās</span>
-	<span id="320#abît" data-intext="abît" data-perslemma="abeo" data-lemma="abeō abīre abiī abitum" data-pos="v3sria---" data-shortdef="to go away">abît</span>.
+	<span id="320#abīt" data-intext="abīt" data-perslemma="abeo" data-lemma="abeō abīre abiī abitum" data-pos="v3sria---" data-shortdef="to go away">abīt</span>.
 </p>
 <p data-ln="321">
 	<span id="321#sed" data-intext="sed" data-perslemma="sed" data-lemma="sed" data-pos="c--------" data-shortdef="but">sed</span>
@@ -2523,7 +2523,7 @@
 	<span id="324#Bacchī" data-intext="Bacchī" data-perslemma="Bacchus" data-lemma="Bacchus –ī m." data-pos="n-s---mg-" data-shortdef="Bacchus">Bacchī</span>
 	<span id="324#dōna" data-intext="dōna" data-perslemma="donum" data-lemma="dōnum dōnī n." data-pos="n-p---na-" data-shortdef="gift">dōna</span>
 	<span id="324#permūtat" data-intext="permūtat" data-perslemma="permuto" data-lemma="permūtō permūtāre permūtāvī permūtātus" data-pos="v3spia---" data-shortdef="to exchange">permūtat</span>
-	<span id="324#cruor" data-intext="cruor" data-perslemma="cruor" data-lemma="cruor cruōris m." data-pos="n-s---mn-" data-shortdef="blood, bloodshed">cruor</span>,
+	<span id="324#cruor" data-intext="cruor" data-perslemma="cruor" data-lemma="cruor cruōris m." data-pos="n-s---mn-" data-shortdef="blood, bloodshed">cruor</span>
 </p>
 <p data-ln="325">
 	<span id="325#ambitque" data-intext="ambitque" data-perslemma="ambio" data-lemma="ambiō –īre –īvī (–iī) –ītus" data-pos="v3spia---" data-shortdef="to go round; strive for, aim at; encompass">ambitque</span>
