--- a/index.html
+++ b/index.html
@@ -2827,12 +2827,12 @@
 	<span id="358#iecur" data-intext="iecur" data-perslemma="jecur" data-lemma="iecur –oris or iecinoris n." data-pos="n-s---nn-" data-shortdef="the liver">iecur</span>
 </p>
 <p data-ln="359">
-	<span id="359#ac" data-intext="ac" data-perslemma="ac" data-lemma="ac" data-pos="c--------" data-shortdef="and in addition">ac</span> —
+	<span id="359#ac" data-intext="ac" data-perslemma="ac" data-lemma="ac" data-pos="c--------" data-shortdef="and in addition">ac</span>,
 	<span id="359#semper" data-intext="semper" data-perslemma="semper" data-lemma="semper" data-pos="d--------" data-shortdef="always">semper</span>
 	<span id="359#ōmen" data-intext="ōmen" data-perslemma="omen" data-lemma="ōmen ōminis n." data-pos="n-s---nn-" data-shortdef="omen">ōmen</span>
 	<span id="359#ūnicō" data-intext="ūnicō" data-perslemma="unicus" data-lemma="ūnicus –a –um" data-pos="a-s---nd-" data-shortdef="unique">ūnicō</span>
 	<span id="359#imperiō" data-intext="imperiō" data-perslemma="imperium" data-lemma="imperium imperiī n." data-pos="n-s---nd-" data-shortdef="command, power">imperiō</span>
-	<span id="359#grave" data-intext="grave" data-perslemma="gravis" data-lemma="gravis grave" data-pos="a-s---nn-" data-shortdef="heavy">grave</span> —
+	<span id="359#grave" data-intext="grave" data-perslemma="gravis" data-lemma="gravis grave" data-pos="a-s---nn-" data-shortdef="heavy">grave</span>,
 </p>
 <p data-ln="360">
 	<span id="360#ēn" data-intext="ēn" data-perslemma="en" data-lemma="ēn or em" data-pos="e--------" data-shortdef="look!">ēn</span>
